Bug 107544 - Style Presets content panel empty in the Sidebar Design deck
Summary: Style Presets content panel empty in the Sidebar Design deck
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:5.5.0 target:5.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Design
  Show dependency treegraph
 
Reported: 2017-05-01 08:09 UTC by baffclan
Modified: 2017-05-22 15:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
with bug (124.02 KB, image/png)
2017-05-02 14:43 UTC, Fakabbir amin
Details
bug not reproducible in 5.4 alpha (90.93 KB, image/png)
2017-05-02 14:44 UTC, Fakabbir amin
Details
Screenshot (120.19 KB, image/jpeg)
2017-05-02 23:50 UTC, baffclan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2017-05-01 08:09:44 UTC
Steps to Reproduce:
1. Start LibO-Dev
2. Create Writer Document
3. Open Sidebar
4. Click Design
5. Open "Style Presents"

Actual Results:
6. "Style Presents" is empty

Version: 5.4.0.0.alpha1+ (x64)
Build ID: bbe579a47845e56caf05ae7ab9fdf49319f5647c
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2017-04-30_00:10:55
Locale: ja-JP (ja_JP); Calc: group
Comment 1 Fakabbir amin 2017-05-02 14:42:07 UTC
Confirmed in : 
Version: 5.3.0.3
Build ID: 5.3.0-2
CPU Threads: 4; OS Version: Linux 4.9; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group

Not found in :
Version: 5.4.0.0.alpha0+
Build ID: 74ccd02eda2d6325a27266fd935aba29b3d75020
CPU threads: 4; OS: Linux 4.9; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-04-27_23:51:14
Locale: en-US (en_US.UTF-8); Calc: group

Could you please add screenshot of the menu ?, as I can't even find "Design".
Please look at the attachment
Comment 2 Fakabbir amin 2017-05-02 14:43:42 UTC
Created attachment 133013 [details]
with bug
Comment 3 Fakabbir amin 2017-05-02 14:44:39 UTC
Created attachment 133014 [details]
bug not reproducible in 5.4 alpha
Comment 4 baffclan 2017-05-02 23:50:29 UTC
Created attachment 133019 [details]
Screenshot

(In reply to Fakabbir amin from comment #1)
> Could you please add screenshot of the menu ?, as I can't even find "Design".
> Please look at the attachment
Thanks for comments and testing.

attachment image:
LibO 5.3.3.1 (x64)/Windows has not Design/Sidebar
LibO-Dev 5.4.0.0.alpha1+ (x64)/Windows has Design/Sidebar


Version: 5.3.3.1 (x64)
Build ID: 46360c72c4823cefeaa85af537fba22bd568da7e
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: new; 
Locale: ja-JP (ja_JP); Calc: group


Version: 5.4.0.0.alpha1+ (x64)
Build ID: d02d52887678cd3d518c19a235bc443c292b3041
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2017-05-01_22:53:14
Locale: ja-JP (ja_JP); Calc: group
Comment 5 Buovjaga 2017-05-06 13:53:09 UTC
Fakabbir: you have to activate experimental features in Tools - Options - Advanced.

Confirmed.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha1+
Build ID: 6e4cba99bb35e6697b94309eedd1a08ebea2dc68
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 5th 2016
Comment 6 Yousuf Philips (jay) (retired) 2017-05-06 18:24:56 UTC
The content panel used to appear in 5.0.

Version: 5.0.6.3
Build ID: 490fc03b25318460cfc54456516ea2519c11d1aa
Locale: en-US (en_US.UTF-8)
Comment 7 Fakabbir amin 2017-05-07 05:07:41 UTC
@Buovjaga : Thanks for the insight.

Wasn't aware, since not mentioned in bug details.

Confirmed in :

Version: 5.4.0.0.alpha0+
Build ID: 74ccd02eda2d6325a27266fd935aba29b3d75020
CPU threads: 4; OS: Linux 4.9; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-04-27_23:51:14
Locale: en-US (en_US.UTF-8); Calc: group
Comment 8 raal 2017-05-17 14:47:27 UTC
This seems to have begun at the below commit.
Adding Cc: to Gabor Kelemen; Could you possibly take a look at this one? Thanks
 cc2bd4fcf5b6ee21b09426ac5a4cc4da8af134eb is the first bad commit
commit cc2bd4fcf5b6ee21b09426ac5a4cc4da8af134eb
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Sep 8 08:10:24 2016 -0700

    source e75057a4d79d96464ff7ddd1511641b23757a502
author	Gabor Kelemen <kelemeng@ubuntu.com>	2016-09-07 13:27:47 (GMT)
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2016-09-07 17:46:22 (GMT)
commit e75057a4d79d96464ff7ddd1511641b23757a502 (patch)
tree 3f854dc0b6fbd69d315bf751be840011b6a59bc9
parent 1fc1e8ed0c24ea545658ee6e4aabd40d74b7125f (diff)
tdf101964 Make the Styles category name translatable in Templates dialog
Comment 9 Gabor Kelemen (Collabora) 2017-05-17 18:56:41 UTC
There is a hardwired "styles" string to be compared with the name of the now "Styles" category here:
http://opengrok.libreoffice.org/xref/core/sw/source/uibase/sidebar/StylePresetsPanel.cxx#174
Comment 10 Commit Notification 2017-05-19 17:18:20 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3f9f03f52c2134058dff87eb1528a19450c566c

tdf#107544 Follow the styles -> Styles change in template categories

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2017-05-22 14:00:13 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0e86a4a9b8511ffe0437fae1185c2a4c057b9dca&h=libreoffice-5-4

tdf#107544 Follow the styles -> Styles change in template categories

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.