tdf#107544 Follow the styles -> Styles change in template categories

Commit e75057a4d79d96464ff7ddd1511641b23757a502 caused the
Style Presets category to become empty in the Design sidebar
of Writer.

Change-Id: I96353ddd7619b8b845286f0ec5a27aed5fac99fb
Reviewed-on: https://gerrit.libreoffice.org/37732
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>